--- a/back-end.csproj
+++ b/back-end.csproj
@@ -11,7 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7" />
     <PackageReference Include="MySql.Data" Version="8.0.27" />
+    <PackageReference Include="Nethereum.Signer" Version="4.1.1" />
+    <PackageReference Include="Nethereum.Util" Version="4.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
