--- a/back-end.csproj
+++ b/back-end.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="Nethereum.Signer" Version="4.1.1" />
     <PackageReference Include="Nethereum.Util" Version="4.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
