--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "server=cryminals-db.czgsprntqbzw.sa-east-1.rds.amazonaws.com;user=admin;password=3228499as;database=cryminals;port=3306;"
+    "Default": ""
 
   }
 }
